[gd_scene load_steps=3 format=3 uid="uid://cursiuu8rbelp"]

[ext_resource type="Theme" uid="uid://cyoxrwsnvsuny" path="res://ui/bark_moss_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/DayNightControls.gd" id="2_script"]

[node name="DayNightControls" type="Control"]
layout_mode = 3
anchor_right = 0.3
anchor_bottom = 0.2
offset_left = 10.0
offset_top = 10.0
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Day/Night Cycle"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Time: Dawn"
horizontal_alignment = 1

[node name="TimeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.25

[node name="SpeedLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Speed: 1.0x"

[node name="SpeedSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="ToggleButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Pause Cycle"
